# code_injection

./: .gitignore  CMakeLists.txt  README.md
common/: ntddk.h
mitigation/evasion/: copysyscallstub.cpp
payload/: dll_payload.cpp  executable_payload.cpp  shellcode.hpp
pe_injection/: pe_inject.cpp  process_doppelganging.cpp  process_ghosting.cpp  process_hollowing.cpp  transacted_hollowing.cpp
pe_injection/dll_injection/: appcertdlls_injection.cpp  appinitdlls_injection.cpp  classic_dll_injection.cpp  knowndllscache_injection.cpp  setwindowshook_injection.cpp  shim_injection.cpp
pe_injection/process_doppelganging/: ntddk.h  process_doppelganging.cpp
shellcode_injection/: atombombing_injection.cpp  classic_shellcode_injection.cpp  entrypoint_injection.cpp  ewmi_injection.cpp  ghostwriting_injection.cpp  kernelcallbacktable_injection.cpp  propagate_injection.cpp  queueapc_injection.cpp  section_injection.cpp  threadcontext_injection.cpp  tlscallback_injection.cpp
